--- a/frappe/templates/web.html
+++ b/frappe/templates/web.html
@@ -7,7 +7,7 @@ id="page-{{ name or route }}" data-path="{{ pathname }}"
 {% endmacro %}
 
 {% block content %}
-<div class="page-container" container_attributes()>
+<div class="page-container" {{ container_attributes() }}>
 	{% if show_sidebar %}
 		<div class="sidebar-block">
 			{% include "templates/includes/web_sidebar.html" %}
