Init link preview

--- a/frappe/public/less/social.less
+++ b/frappe/public/less/social.less
@@ -113,6 +113,19 @@ body[data-route*="social"] {
 			background-color: #F6F6F6;
 			border-top: 1px solid @border-color;
 		}
+		.preview-card {
+			height: 150px;
+			border: 1px solid @light-border-color;
+			border-radius: 5px;
+			margin-top: 15px;
+			padding-right: 10px;
+			background: white;
+			img {
+				height: 100%;
+				border: none;
+				margin-left: 10px;
+			}
+		}
 	}
 
 	.muted-title {
