Overwrite transision applied for  <a>

--- a/frappe/public/less/social.less
+++ b/frappe/public/less/social.less
@@ -6,7 +6,9 @@ body[data-route*="social"] {
 	.layout-main-section {
 		border: none;
 	}
-
+	a {
+		transition: none;
+	}
 	.liked-by-popover {
 		font-size: @text-small;
 		li {
