fix(Quill): Use a local copy of quill-mention
quill-mention's distribution copy is built with webpack
so it doesn't work with rollup

--- a/frappe/public/less/quill.less
+++ b/frappe/public/less/quill.less
@@ -1,7 +1,7 @@
 @import "variables.less";
 @import (less) "quill/dist/quill.snow.css";
 @import (less) "quill/dist/quill.bubble.css";
-@import (less) "quill-mention/src/quill.mention.css";
+@import (less) "../js/frappe/form/controls/quill-mention/quill.mention.css";
 
 .ql-toolbar.ql-snow, .ql-container.ql-snow {
     border-color: @border-color;
