provision to setup password while adding system manager

--- a/frappe/public/css/list.css
+++ b/frappe/public/css/list.css
@@ -53,7 +53,7 @@
 }
 .filter-box .filter_field {
   padding-right: 15px;
-  width: calc(64%);
+  width: calc(100% - 36px);
 }
 .filter-box .filter_field .frappe-control {
   position: relative;
