Use full-width container for desk [desk-sidebar] [2018-code-sprint]
This change makes Desk full-width by changing the page wrapper from a
bootstrap ‘container’ to a ‘container-fluid’. Moving from an elastic
layout to a fluid, full-width layout creates a more responsive user
experience that takes advantage of all available screen real estate. The
additional space also provides opportunity for new features and view
elements, such as the Desk Sidebar that Josh Reeder, Tyler Matteson, and
myself will be working to get pulled in in the ensuing weeks.

--- a/frappe/public/less/mobile.less
+++ b/frappe/public/less/mobile.less
@@ -70,12 +70,11 @@ body {
 		padding: 8px 0px !important;
 	}
 
-	.navbar > .container > .navbar-header {
+	.navbar > .container-fluid > .navbar-header {
 		float: left;
-		width: 80%;
 	}
 
-	.navbar > .container > .navbar-right {
+	.navbar > .container-fluid > .navbar-right {
 		float: right;
 	}
 
