--- a/frappe/public/less/desktop.less
+++ b/frappe/public/less/desktop.less
@@ -18,6 +18,11 @@ body[data-route=""] .navbar-default, body[data-route="desktop"] .navbar-default 
 	overflow: auto;
 }
 
+.container-margin-10 {
+	margin-right: 10px;
+	margin-left: 10px;
+}
+
 .case-wrapper {
 	position: relative;
 	margin: 0px;
@@ -341,4 +346,3 @@ body[data-route="desktop"] .navbar-set-desktop-icons {
 	}
 
 }
-
