--- a/frappe/public/less/flex.less
+++ b/frappe/public/less/flex.less
@@ -29,6 +29,13 @@
 
 .justify-flex-start {
     justify-content: flex-start;
+}
+
+.flush-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
 
 .flush-top {
     display: flex;
