--- a/frappe/public/css/dark.css
+++ b/frappe/public/css/dark.css
@@ -262,6 +262,6 @@ kbd {
     color: white !important;
 }
 /* Graphs */
-.chart-container .axis{
+.chart-container .axis, .chart-container .chart-label{
     fill: white !important;
 }
