[fix][padding] setup wizard footer

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -947,7 +947,7 @@ input[type="checkbox"] {
 		font-weight: bold;
 	}
 	.footer {
-		margin-top: 15px;
+		margin: 15px 0;
 		padding: 0px 7px;
 
 		.btn:not(:last-child) {
