--- a/frappe/templates/includes/navbar/navbar_login.html
+++ b/frappe/templates/includes/navbar/navbar_login.html
@@ -1,29 +1,23 @@
 <!-- post login tools -->
 {% if not only_static %}
-<li class="dropdown logged-in" id="website-post-login"
-	data-label="website-post-login" style="display: none">
-	<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+<li class="dropdown logged-in" id="website-post-login" data-label="website-post-login" style="display: none">
+	<a href="#" class="nav-item nav-link dropdown-toggle" data-toggle="dropdown">
 		<span class="user-image-wrapper"></span>
 		<span class="full-name"></span>
 		<b class="caret"></b>
 	</a>
-    <ul class="dropdown-menu" role="menu">
+	<ul class="dropdown-menu dropdown-menu-right" role="menu">
 		{%- for child in post_login -%}
-		<li {% if child.label %}data-label="{{ child.label }}" {% endif %}
-			{% if child.class %} class="{{ child.class }}" {% endif %}>
-
-			{%- if child.url -%}
-				<a href="{{ child.url | abs_url }}" {{ child.target or '' }}
-					rel="nofollow">
-					{{ child.label }}
-				</a>
-			{%- endif -%}
-		</li>
+		{%- if child.url -%}
+		<a class="dropdown-item" href="{{ child.url | abs_url }}" {{ child.target or '' }} rel="nofollow">
+			{{ child.label }}
+		</a>
+		{%- endif -%}
 		{%- endfor -%}
-		<li class='switch-to-desk hidden'><a href="/desk">{{ _('Switch To Desk') }}</a></li>
+		<a class="dropdown-item switch-to-desk hidden" href="/desk">{{ _('Switch To Desk') }}</a>
 	</ul>
 </li>
 {% if not hide_login %}
-<li class="btn-login-area"><a href="/login">{{ _("Login") }}</a></li>
+<a class="dropdown-item btn-login-area" href="/login">{{ _("Login") }}</a>
 {% endif %}
 {% endif %}
