Remove container margin for mobile

--- a/frappe/public/less/desk.less
+++ b/frappe/public/less/desk.less
@@ -45,6 +45,13 @@ a[disabled="disabled"] {
 	margin-top: 3px;
 }
 
+@media (min-width: 768px) {
+	.container-margin-10 {
+		margin-right: 10px;
+		margin-left: 10px;
+	}
+}
+
 /* alert */
 
 
