--- a/frappe/templates/emails/auto_email_report.html
+++ b/frappe/templates/emails/auto_email_report.html
@@ -1,7 +1,7 @@
 {% macro get_alignment(col) %}
 {%- if col.fieldtype in ('Int', 'Float', 'Currency', 'Check') %} class="text-right" {% endif -%}
 {% endmacro %}
-{% set max_width = '100%' if columns|length > 3 else '600px' %}
+{% set max_width = '100%' if columns and columns|length > 3 else '600px' %}
 <table class="report-title" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: {{ max_width }}">
 	<tr>
 		<td>
