--- a/frappe/public/less/bootstrap/variables.less
+++ b/frappe/public/less/bootstrap/variables.less
@@ -50,7 +50,7 @@
 
 @font-size-base:          14px;
 @font-size-large:         18px;//ceil((@font-size-base * 1.25)); // ~18px
-@font-size-small:         ceil((@font-size-base * 0.85)); // ~12px
+@font-size-small:         12px;//ceil((@font-size-base * 0.85)); // ~12px
 
 @font-size-h1:            24px;//floor((@font-size-base * 2.6)); // ~36px
 @font-size-h2:            20px;//floor((@font-size-base * 2.15)); // ~30px
@@ -87,8 +87,8 @@
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-@padding-base-vertical:     6px;
-@padding-base-horizontal:   12px;
+@padding-base-vertical:     4px;//6px;
+@padding-base-horizontal:   10px;//12px;
 
 @padding-large-vertical:    10px;
 @padding-large-horizontal:  16px;
@@ -135,7 +135,7 @@
 @table-bg-active:               @table-bg-hover;
 
 //** Border color for table and cell borders.
-@table-border-color:            #ddd;
+@table-border-color:            #d1d8dd;
 
 
 //== Buttons
@@ -145,30 +145,30 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              #333;
-@btn-default-bg:                 #fff;
-@btn-default-border:             #ccc;
+@btn-default-bg:                 #f0f4f7;
+@btn-default-border:             transparent;
 
 @btn-primary-color:              #fff;
-@btn-primary-bg:                 @brand-primary;
-@btn-primary-border:             darken(@btn-primary-bg, 5%);
+@btn-primary-bg:                 #5e64ff;//@brand-primary;
+@btn-primary-border:             #444bff;//darken(@btn-primary-bg, 5%);
 
 @btn-success-color:              #fff;
-@btn-success-bg:                 @brand-success;
-@btn-success-border:             darken(@btn-success-bg, 5%);
+@btn-success-bg:                 #98d85b;//@brand-success;
+@btn-success-border:             #8bd346;//darken(@btn-success-bg, 5%);
 
 @btn-info-color:                 #fff;
-@btn-info-bg:                    @brand-info;
-@btn-info-border:                darken(@btn-info-bg, 5%);
+@btn-info-bg:                    #8d99a6;//@brand-info;
+@btn-info-border:                #7f8c9b;//darken(@btn-info-bg, 5%);
 
 @btn-warning-color:              #fff;
-@btn-warning-bg:                 @brand-warning;
-@btn-warning-border:             darken(@btn-warning-bg, 5%);
+@btn-warning-bg:                 #ffa00a;//@brand-warning;
+@btn-warning-border:             #f09300;//darken(@btn-warning-bg, 5%);
 
 @btn-danger-color:               #fff;
-@btn-danger-bg:                  @brand-danger;
-@btn-danger-border:              darken(@btn-danger-bg, 5%);
+@btn-danger-bg:                  #ff5858;//@brand-danger;
+@btn-danger-border:              #ff3f3f;//darken(@btn-danger-bg, 5%);
 
-@btn-link-disabled-color:        @gray-light;
+@btn-link-disabled-color:        #777;//@gray-light;
 
 // Allows for customizing button radius independently from global border radius
 @btn-border-radius-base:         @border-radius-base;
@@ -186,9 +186,9 @@
 @input-bg-disabled:              @gray-lighter;
 
 //** Text color for `<input>`s
-@input-color:                    @gray;
+@input-color:                    #555;//@gray;
 //** `<input>` border color
-@input-border:                   #ccc;
+@input-border:                   #d1d8dd;//#ccc;
 
 // TODO: Rename `@input-border-radius` to `@input-border-radius-base` in v4
 //** Default `.form-control` border radius
@@ -197,7 +197,7 @@
 //** Large `.form-control` border radius
 @input-border-radius-large:      @border-radius-large;
 //** Small `.form-control` border radius
-@input-border-radius-small:      @border-radius-small;
+@input-border-radius-small:      3px;//@border-radius-small;
 
 //** Border color for inputs on focus
 @input-border-focus:             #66afe9;
@@ -206,16 +206,16 @@
 @input-color-placeholder:        #999;
 
 //** Default `.form-control` height
-@input-height-base:              (@line-height-computed + (@padding-base-vertical * 2) + 2);
+@input-height-base:              30px;//(@line-height-computed + (@padding-base-vertical * 2) + 2);
 //** Large `.form-control` height
-@input-height-large:             (ceil(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2);
+@input-height-large:             46px;//(ceil(@font-size-large * @line-height-large) + (@padding-large-vertical * 2) + 2);
 //** Small `.form-control` height
-@input-height-small:             (floor(@font-size-small * @line-height-small) + (@padding-small-vertical * 2) + 2);
+@input-height-small:             30px;//(floor(@font-size-small * @line-height-small) + (@padding-small-vertical * 2) + 2);
 
 //** `.form-group` margin
 @form-group-margin-bottom:       15px;
 
-@legend-color:                   @gray-dark;
+@legend-color:                   #333;//@gray-dark;
 @legend-border-color:            #e5e5e5;
 
 //** Background color for textual input addons
