less file changes

--- a/frappe/public/less/bootstrap/frappe.less
+++ b/frappe/public/less/bootstrap/frappe.less
@@ -147,6 +147,51 @@ mark,
     }
 }
 
+//
+// Component animations
+// --------------------------------------------------
+// Heads up!
+//
+// We don't use the `.opacity()` mixin here since it causes a bug with text
+// fields in IE7-8. Source: https://github.com/twbs/bootstrap/pull/3552.
+.fade {
+    opacity: 0;
+    .transition(opacity .15s linear);
+    &.in {
+      opacity: 1;
+    }
+  }
+  
+  .collapse {
+    display: none;
+    visibility: hidden;
+  
+    &.in { 
+        display: block; 
+        visibility: visible;
+    }
+  }
+  
+//
+// Dropdown menus
+// --------------------------------------------------
+// Dropdown arrow/caret
+.caret {
+    border-top:   @caret-width-base solid;
+}
+
+// Tabbable tabs
+// -------------------------
+// Hide tabbable panes to start, show them when `.active`
+.tab-content {
+    > .tab-pane {
+      visibility: hidden;
+    }
+    > .active {
+      display: visible;
+    }
+  }
+
 // Navbar collapse (body)
 //
 // Group your navbar content into this for easy collapsing and expanding across
