less file changes

--- a/frappe/public/less/bootstrap/frappe.less
+++ b/frappe/public/less/bootstrap/frappe.less
@@ -310,3 +310,9 @@ mark,
         border-color: #ebeff2;
     }
 }
+
+// Modal header
+// Top section of the modal w/ title and dismiss
+.modal-header {
+    min-height: 16.42857143px;  
+}
