--- a/frappe/public/less/bootstrap/variables.less
+++ b/frappe/public/less/bootstrap/variables.less
@@ -456,10 +456,10 @@
 @pagination-hover-border:              #ddd;
 
 @pagination-active-color:              #fff;
-@pagination-active-bg:                 @brand-primary;
-@pagination-active-border:             @brand-primary;
+@pagination-active-bg:                 #5e64ff;//@brand-primary;
+@pagination-active-border:             #5e64ff;//@brand-primary;
 
-@pagination-disabled-color:            @gray-light;
+@pagination-disabled-color:            #777;//@gray-light;
 @pagination-disabled-bg:               #fff;
 @pagination-disabled-border:           #ddd;
 
@@ -569,17 +569,17 @@
 //##
 
 //** Default label background color
-@label-default-bg:            @gray-light;
+@label-default-bg:            #f0f4f7;//@gray-light;
 //** Primary label background color
-@label-primary-bg:            @brand-primary;
+@label-primary-bg:            #d9f6ff;//@brand-primary;
 //** Success label background color
-@label-success-bg:            @brand-success;
+@label-success-bg:            #e4ffc1;//@brand-success;
 //** Info label background color
-@label-info-bg:               @brand-info;
+@label-info-bg:               #e8ddff;//@brand-info;
 //** Warning label background color
-@label-warning-bg:            @brand-warning;
+@label-warning-bg:            #ffe6bf;//@brand-warning;
 //** Danger label background color
-@label-danger-bg:             @brand-danger;
+@label-danger-bg:             #ffdcdc;//@brand-danger;
 
 //** Default label text color
 @label-color:                 #fff;
@@ -607,7 +607,7 @@
 @modal-content-fallback-border-color:          #999;
 
 //** Modal backdrop background color
-@modal-backdrop-bg:           #000;
+@modal-backdrop-bg:           #334143;//000;
 //** Modal backdrop opacity
 @modal-backdrop-opacity:      .5;
 //** Modal header border color
@@ -657,15 +657,15 @@
 @progress-border-radius:      @border-radius-base;
 
 //** Default progress bar color
-@progress-bar-bg:             @brand-primary;
+@progress-bar-bg:             #36414c;//@brand-primary;
 //** Success progress bar color
-@progress-bar-success-bg:     @brand-success;
+@progress-bar-success-bg:     #98d85b;//@brand-success;
 //** Warning progress bar color
-@progress-bar-warning-bg:     @brand-warning;
+@progress-bar-warning-bg:     #ffa00a;//@brand-warning;
 //** Danger progress bar color
-@progress-bar-danger-bg:      @brand-danger;
+@progress-bar-danger-bg:      #ff5858;//@brand-danger;
 //** Info progress bar color
-@progress-bar-info-bg:        @brand-info;
+@progress-bar-info-bg:        #935eff;//@brand-info;
 
 
 //== List group
@@ -772,13 +772,13 @@
 //
 //##
 
-@badge-color:                 #fff;
+@badge-color:                 #36414c;
 //** Linked badge text color on hover
 @badge-link-hover-color:      #fff;
-@badge-bg:                    @gray-light;
+@badge-bg:                    #f0f4f7;//@gray-light;
 
 //** Badge text color in active nav link
-@badge-active-color:          @link-color;
+@badge-active-color:          #36414c;//@link-color;
 //** Badge background color in active nav link
 @badge-active-bg:             #fff;
 
