css styling fixes

--- a/frappe/public/less/bootstrap/frappe.less
+++ b/frappe/public/less/bootstrap/frappe.less
@@ -180,6 +180,16 @@ mark,
     border-top:   @caret-width-base solid;
 }
 
+// The dropdown menu (ul)
+.dropdown-menu {
+  
+    // Links within the dropdown menu
+    > li > a {
+        padding: 14px;
+        white-space: normal;    
+    }
+}
+
 // Tabbable tabs
 // -------------------------
 // Hide tabbable panes to start, show them when `.active`
