fixed Website UI glitches due to bootstrap changes

--- a/frappe/public/less/bootstrap/variables.less
+++ b/frappe/public/less/bootstrap/variables.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #5e64ff;//darken(#428bca, 6.5%); // #337ab7
+@brand-primary:         #5e64ff;
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
@@ -511,7 +511,7 @@
 @state-warning-bg:               #fcf8e3;
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
-@state-danger-text:              #a94442;
+@state-danger-text:              #ff5858;
 @state-danger-text-hover:        #ff2525;
 @state-danger-bg:                #f2dede;
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
@@ -569,17 +569,17 @@
 //##
 
 //** Default label background color
-@label-default-bg:            #f0f4f7;//@gray-light;
+@label-default-bg:            #f0f4f7;
 //** Primary label background color
-@label-primary-bg:            #d9f6ff;//@brand-primary;
+@label-primary-bg:            #d9f6ff;
 //** Success label background color
-@label-success-bg:            #e4ffc1;//@brand-success;
+@label-success-bg:            #e4ffc1;
 //** Info label background color
-@label-info-bg:               #e8ddff;//@brand-info;
+@label-info-bg:               #e8ddff;
 //** Warning label background color
-@label-warning-bg:            #ffe6bf;//@brand-warning;
+@label-warning-bg:            #ffe6bf;
 //** Danger label background color
-@label-danger-bg:             #ffdcdc;//@brand-danger;
+@label-danger-bg:             #ffdcdc;
 
 //** Default label text color
 @label-color:                 #fff;
@@ -607,7 +607,7 @@
 @modal-content-fallback-border-color:          #999;
 
 //** Modal backdrop background color
-@modal-backdrop-bg:           #334143;//000;
+@modal-backdrop-bg:           #334143;
 //** Modal backdrop opacity
 @modal-backdrop-opacity:      .5;
 //** Modal header border color
@@ -657,15 +657,15 @@
 @progress-border-radius:      @border-radius-base;
 
 //** Default progress bar color
-@progress-bar-bg:             #36414c;//@brand-primary;
+@progress-bar-bg:             #36414c;
 //** Success progress bar color
-@progress-bar-success-bg:     #98d85b;//@brand-success;
+@progress-bar-success-bg:     #98d85b;
 //** Warning progress bar color
-@progress-bar-warning-bg:     #ffa00a;//@brand-warning;
+@progress-bar-warning-bg:     #ffa00a;
 //** Danger progress bar color
-@progress-bar-danger-bg:      #ff5858;//@brand-danger;
+@progress-bar-danger-bg:      #ff5858;
 //** Info progress bar color
-@progress-bar-info-bg:        #935eff;//@brand-info;
+@progress-bar-info-bg:        #935eff;
 
 
 //== List group
@@ -775,7 +775,7 @@
 @badge-color:                 #36414c;
 //** Linked badge text color on hover
 @badge-link-hover-color:      #fff;
-@badge-bg:                    #f0f4f7;//@gray-light;
+@badge-bg:                    #f0f4f7;
 
 //** Badge text color in active nav link
 @badge-active-color:          #36414c;//@link-color;
@@ -852,11 +852,11 @@
 //** Horizontal offset for forms and lists.
 @component-offset-horizontal: 180px;
 //** Text muted color
-@text-muted:                  #8d99a6;//@gray-light;
+@text-muted:                  #8d99a6;
 //** Abbreviations and acronyms border color
-@abbr-border-color:           #777;//@gray-light;
+@abbr-border-color:           #777;
 //** Headings small color
-@headings-small-color:        #777;//@gray-light;
+@headings-small-color:        #777;
 //** Blockquote small color
 @blockquote-small-color:      @gray-light;
 //** Blockquote font size
