--- a/frappe/public/less/bootstrap/variables.less
+++ b/frappe/public/less/bootstrap/variables.less
@@ -862,9 +862,9 @@
 //** Blockquote font size
 @blockquote-font-size:        (@font-size-base * 1.25);
 //** Blockquote border color
-@blockquote-border-color:     #eee;//@gray-lighter;
+@blockquote-border-color:     #eee;
 //** Page header border color
-@page-header-border-color:    #eee;//@gray-lighter;
+@page-header-border-color:    #eee;
 //** Width of horizontal description list titles
 @dl-horizontal-offset:        @component-offset-horizontal;
 //** Point at which .dl-horizontal becomes horizontal
