Initial bringup of dark mode using leaner stylesheets

--- a/frappe/public/less/desk_dark.less
+++ b/frappe/public/less/desk_dark.less
@@ -1,10 +1,11 @@
-@import "variables.less";
+@import "variables_dark.less";
 @import "mixins.less";
 @import "common.less";
 @import "quill.less";
 
 #page-desktop {
-	background-color: @page-desktop;
+    background-color : rgba(33, 33, 33, 1);
+    color: #fff;
 }
 
 .nav-pills a, .nav-pills a:hover {
