--- a/frappe/public/less/variables_dark.less
+++ b/frappe/public/less/variables_dark.less
@@ -19,7 +19,7 @@
 @text-medium:			    12px;
 @text-small:			    10px;
 @text-dark:                 #2e3338;
-@page-desktop:              #4B4C9D;
+@page-desktop:              rgba(66, 66, 66, 1);
 
 @indicator-blue:		    #5e64ff;
 @indicator-red:			    #ff5858;
